--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,11 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x          # latest LTS
-        cache: true                    # NuGet cache
+        cache: true                    # turn NuGet caching on
+        cache-dependency-path: |
+          **/*.csproj                  # hash every C# project file …
+          **/*.fsproj                  # … and any F# projects, if present
+          **/*.sln                     # plus the solution file(s)
 
     # --- restore & build -----------------------------------------------------
     - name: Restore packages
