--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,10 +63,10 @@ jobs:
     - name: Generate patch template
       shell: pwsh
       run: |
-        $vipb      = "tests/Samples/NI Icon editor.vipb"
-        $json      = "tmp.json"
-        $paths     = "all-paths.txt"
-        $patchFile = "ci-patch-full.yml"
+        $vipb      = "./tests/Samples/NI Icon editor.vipb"
+        $json      = "./tmp.json"
+        $paths     = "./all-paths.txt"
+        $patchFile = "./ci-patch-full.yml"
 
         # 1. VIPB → JSON
         ./publish/linux-x64/VipbJsonTool vipb2json $vipb $json
