--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,7 @@ jobs:
         Install-Module PowerShell-Yaml -RequiredVersion 0.4.2 -Scope CurrentUser -Force
         Install-Module Pester          -Scope CurrentUser -Force
 
-    # --- generate patch template & run Pester tests --------------------------
-    - name: Generate patch template
+    - name: Generate patch template & run Pester tests
       shell: pwsh
       run: |
         $vipb      = "tests/Samples/NI Icon editor.vipb"
@@ -75,18 +74,44 @@ jobs:
         ./tools/Enumerate-VipbPaths.ps1 $json | Set-Content $paths
 
         # 3. Build patch YAML (guarantee at least one entry)
-        $lines = @('schema_version: 1','patch:')
+        $lines = @(
+          'schema_version: 1',
+          'patch:'
+        )
         foreach ($p in Get-Content $paths) {
-          if    ($p -match '\[\d+\]')      { $lines += "  $p: '__ARRAY__'" }
-          elseif($p -match '@')            { $lines += "  $p: 'TEST'"      }
-          elseif($p -in 'true','false')    { $lines += "  $p: true"        }
-          else                             { $lines += "  $p: 'TEST'"      }
+          if    ($p -match '\[\d+\]')      { $lines += "  ${p}: '__ARRAY__'" }
+          elseif($p -match '@')            { $lines += "  ${p}: 'TEST'"      }
+          elseif($p -in 'true','false')    { $lines += "  ${p}: true"        }
+          else                             { $lines += "  ${p}: 'TEST'"      }
         }
         if ($lines.Count -le 2) {
           $lines += '  Library_General_Settings.Company_Name.__text: ""'
         }
         $lines | Set-Content -Encoding utf8 $patchFile
         Write-Host "→ Written patch file with $($lines.Count-2) entries"
+
+    - name: Sanity-check artefacts
+      run: |
+        test -f tmp.json          || (echo 'ERROR: tmp.json missing' && exit 1)
+        test -f ci-patch-full.yml || (echo 'ERROR: patch YAML missing' && exit 1)
+
+    - name: Run Pester tests
+      shell: pwsh
+      run: |
+        # basic round-trip (no params)
+        Invoke-Pester tests/RoundTrip.Tests.ps1 -CI
+
+        # full-coverage + deep-patch with correct parameter binding
+        Invoke-Pester -CI -Script @{
+          Path       = 'tests/RoundTrip.Full.Tests.ps1'
+          Parameters = @{ PatchFile = 'ci-patch-full.yml'; SourceVipb = 'tests/Samples/NI Icon editor.vipb' }
+        }
+
+        Invoke-Pester -CI -Script @{
+          Path       = 'tests/RoundTrip.Deep.Tests.ps1'
+          Parameters = @{ PatchFile = 'ci-patch-full.yml'; SourceVipb = 'tests/Samples/NI Icon editor.vipb' }
+        }
+
 
     - name: Sanity-check artefacts
       run: |
