--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,10 +70,20 @@ jobs:
         # 1. VIPB → JSON
         ./publish/linux-x64/VipbJsonTool vipb2json $vipb $json
 
-        # 2. Enumerate JSON paths
-        ./tools/Enumerate-VipbPaths.ps1 $json | Set-Content $paths
+        # 2. Enumerate JSON paths (write reliably to disk)
+        ./tools/Enumerate-VipbPaths.ps1 $json |
+          Out-File -Encoding utf8 $paths
 
-        # 3. Build patch YAML (guarantee at least one entry)
+        # 3. Sanity-check that enumeration succeeded
+        if (-not (Test-Path $paths)) {
+          Write-Error "ERROR: path enumeration failed; '$paths' not found."
+          exit 1
+        }
+        if ((Get-Content $paths).Count -eq 0) {
+          Write-Warning "WARNING: no paths enumerated (file is empty)."
+        }
+
+        # 4. Build patch YAML, guarantee at least one entry
         $lines = @(
           'schema_version: 1',
           'patch:'
@@ -85,56 +95,35 @@ jobs:
           else                             { $lines += "  ${p}: 'TEST'"      }
         }
         if ($lines.Count -le 2) {
+          # fallback entry so patch file isn’t empty
           $lines += '  Library_General_Settings.Company_Name.__text: ""'
         }
-        $lines | Set-Content -Encoding utf8 $patchFile
-        Write-Host "→ Written patch file with $($lines.Count-2) entries"
+        $lines | Out-File -Encoding utf8 $patchFile
+        Write-Host "→ Wrote patch file '$patchFile' with $($lines.Count - 2) entries"
 
     - name: Sanity-check artefacts
       run: |
         test -f tmp.json          || (echo 'ERROR: tmp.json missing' && exit 1)
+        test -f all-paths.txt     || (echo 'ERROR: all-paths.txt missing' && exit 1)
         test -f ci-patch-full.yml || (echo 'ERROR: patch YAML missing' && exit 1)
 
     - name: Run Pester tests
       shell: pwsh
       run: |
-        # basic round-trip (no params)
+        # 1. Basic round-trip
         Invoke-Pester tests/RoundTrip.Tests.ps1 -CI
 
-        # full-coverage + deep-patch with correct parameter binding
+        # 2. Full-coverage round-trip with patch
         Invoke-Pester -CI -Script @{
           Path       = 'tests/RoundTrip.Full.Tests.ps1'
           Parameters = @{ PatchFile = 'ci-patch-full.yml'; SourceVipb = 'tests/Samples/NI Icon editor.vipb' }
         }
 
+        # 3. Deep selective-patch test
         Invoke-Pester -CI -Script @{
           Path       = 'tests/RoundTrip.Deep.Tests.ps1'
           Parameters = @{ PatchFile = 'ci-patch-full.yml'; SourceVipb = 'tests/Samples/NI Icon editor.vipb' }
         }
-
-
-    - name: Sanity-check artefacts
-      run: |
-        test -f tmp.json          || (echo 'ERROR: tmp.json missing' && exit 1)
-        test -f ci-patch-full.yml || (echo 'ERROR: patch YAML missing' && exit 1)
-
-    - name: Run Pester tests
-      shell: pwsh
-      run: |
-        # basic round-trip (no params)
-        Invoke-Pester tests/RoundTrip.Tests.ps1 -CI
-
-        # full-coverage + deep-patch, passing parameters correctly
-        Invoke-Pester -CI -Script @{
-          Path       = 'tests/RoundTrip.Full.Tests.ps1'
-          Parameters = @{ PatchFile = 'ci-patch-full.yml'; SourceVipb = 'tests/Samples/NI Icon editor.vipb' }
-        }
-
-        Invoke-Pester -CI -Script @{
-          Path       = 'tests/RoundTrip.Deep.Tests.ps1'
-          Parameters = @{ PatchFile = 'ci-patch-full.yml'; SourceVipb = 'tests/Samples/NI Icon editor.vipb' }
-        }
-
 
     # --- Docker image (optional) --------------------------------------------
     - name: Build Docker image
