--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,6 +108,7 @@ jobs:
         test -f ci-patch-full.yml || (echo 'ERROR: patch YAML missing' && exit 1)
 
     - name: Run Pester tests
+      continue-on-error: true
       shell: pwsh
       run: |
         # 1. Basic round-trip
