--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,7 +128,7 @@ jobs:
 
       # --- Docker image (optional) --------------------------------------------
       - name: Build Docker image
-        run: docker build -t ghcr.io/${{ github.repository }}:${{ github.sha }} .
+        run: docker build -t ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} .
 
       # --- Push Docker image to GHCR (main branch and tags only) --------------
       - name: Log in to GitHub Container Registry (GHCR)
@@ -140,15 +140,15 @@ jobs:
 
       - name: Tag Docker image as 'latest' and branch/tag
         run: |
-          docker tag ghcr.io/${{ github.repository }}:${{ github.sha }} ghcr.io/${{ github.repository }}:latest
-          # Tag as branch or tag name (for easier human reference)
-          docker tag ghcr.io/${{ github.repository }}:${{ github.sha }} ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+          docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:latest
+          docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:${{ github.ref_name }}
 
       - name: Push Docker images
         run: |
-          docker push ghcr.io/${{ github.repository }}:${{ github.sha }}
-          docker push ghcr.io/${{ github.repository }}:latest
-          docker push ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+          docker push ghcr.io/labview-community-ci-cd/seed:${{ github.sha }}
+          docker push ghcr.io/labview-community-ci-cd/seed:latest
+          docker push ghcr.io/labview-community-ci-cd/seed:${{ github.ref_name }}
+
 
 
       # --- artefact upload -----------------------------------------------------
