--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ inputs:
     required: true
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/labview-community-ci-cd/seed:v1.3.2'
+  image: 'docker://ghcr.io/labview-community-ci-cd/seed:main'
   args:
     - ${{ inputs.input }}
     - ${{ inputs.output }}
