Revert "Update ci.yml"
This reverts commit de1a380538f04e20ece8831e86c80b269784ef34.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Generate patch template & run Pester tests
         shell: pwsh
         run: |
-          $vipb      = "./tests/Samples/NI Icon editor.vipb"
+          $vipb      = "tests/Samples/NI Icon editor.vipb"
           $json      = "tmp.json"
           $paths     = "all-paths.txt"
           $patchFile = "ci-patch-full.yml"
