--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: pwsh        # every run block uses PowerShell 7
+        shell: pwsh
 
     steps:
       # --- source code ---------------------------------------------------------
@@ -39,7 +39,7 @@ jobs:
                           -p:TreatWarningsAsErrors=false `
                           --no-restore
 
-      # --- publish single-file CLI --------------------------------------------
+      # --- publish single-file CLI ---------------------------------------------
       - name: Publish CLI (linux-x64 single-file)
         run: dotnet publish src/VipbJsonTool `
                             -c Release `
@@ -51,119 +51,52 @@ jobs:
                             --no-build `
                             -o publish/linux-x64
 
-      # --- PowerShell test prerequisites --------------------------------------
-      - name: Install PowerShell modules
+      # --- PowerShell test prerequisites ---------------------------------------
+      - name: Install Pester
+        run: Install-Module Pester -Force -Scope CurrentUser
+
+      - name: Run Pester tests (Basic and Full Golden Sample Coverage)
         run: |
-          Install-Module PowerShell-Yaml -RequiredVersion 0.4.2 -Scope CurrentUser -Force
-          Install-Module Pester          -Scope CurrentUser -Force
+          Invoke-Pester tests/RoundTrip.Tests.ps1 -CI -OutputFile basic-test-results.xml -OutputFormat NUnitXml
+          Invoke-Pester tests/RoundTrip.GoldenSample.Tests.ps1 -CI -Script @{
+            Parameters = @{ SourceFile = "tests/Samples/seed.vipb" }
+          } -OutputFile golden-sample-results.xml -OutputFormat NUnitXml
 
-      - name: Generate patch template & run Pester tests
-        shell: pwsh
-        run: |
-          $vipb      = "tests/Samples/NI Icon editor.vipb"
-          $json      = "tmp.json"
-          $paths     = "all-paths.txt"
-          $patchFile = "ci-patch-full.yml"
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: pester-test-results
+          path: |
+            basic-test-results.xml
+            golden-sample-results.xml
 
-          # 1. VIPB → JSON
-          ./publish/linux-x64/VipbJsonTool vipb2json $vipb $json
-
-          # 2. Enumerate JSON paths (in-memory for reliability)
-           $jsonObj  = Get-Content $json -Raw | ConvertFrom-Json
-           $allPaths = New-Object System.Collections.Generic.List[string]
-           function Add-Paths ($obj, $prefix = "") {
-             if ($obj -is [System.Collections.IDictionary]) {
-               foreach ($k in $obj.Keys) {
-                 Add-Paths $obj[$k] ($prefix ? "$prefix.$k" : $k)
-               }
-             }
-             elseif ($obj -is [System.Collections.IEnumerable] -and $obj -isnot [string]) {
-               $i = 0
-               foreach ($v in $obj) {
-                 Add-Paths $v ($prefix ? "$prefix[$i]" : "[$i]")
-                 $i++
-               }
-             }
-             else {
-               if ($prefix) { [void] $allPaths.Add($prefix) }
-             }
-           }
-           Add-Paths $jsonObj ""
-           $allPaths = $allPaths | Sort-Object -Unique
-           $allPaths | Out-File -Encoding utf8 $paths
-
-          # 3. Sanity-check that enumeration succeeded
-          if (-not (Test-Path $paths)) {
-            Write-Error "ERROR: path enumeration failed; '$paths' not found."
-            exit 1
-          }
-          if ((Get-Content $paths).Count -eq 0) {
-            Write-Warning "WARNING: no paths enumerated (file is empty)."
-          }
-
-          # 4. Build patch YAML, guarantee at least one entry
-          $lines = @(
-            'schema_version: 1',
-            'patch:'
-          )
-          foreach ($p in Get-Content $paths) {
-            if    ($p -match '\[\d+\]')      { $lines += "  ${p}: '__ARRAY__'" }
-            elseif($p -match '@')            { $lines += "  ${p}: 'TEST'"      }
-            elseif($p -in 'true','false')    { $lines += "  ${p}: true"        }
-            else                             { $lines += "  ${p}: 'TEST'"      }
-          }
-          if ($lines.Count -le 2) {
-            # fallback entry so patch file isn’t empty
-            $lines += '  Library_General_Settings.Company_Name.__text: ""'
-          }
-          $lines | Out-File -Encoding utf8 $patchFile
-          Write-Host "→ Wrote patch file '$patchFile' with $($lines.Count - 2) entries"
-
-      - name: Sanity-check artefacts
-        run: |
-          test -f tmp.json          || (echo 'ERROR: tmp.json missing' && exit 1)
-          test -f all-paths.txt     || (echo 'ERROR: all-paths.txt missing' && exit 1)
-          test -f ci-patch-full.yml || (echo 'ERROR: patch YAML missing' && exit 1)
-
-      - name: Run Pester tests
-        shell: pwsh
-        run: |
-          # 1. Basic round-trip
-          Invoke-Pester tests/RoundTrip.Tests.ps1 -CI
-
-          # 2. Full-coverage round-trip with patch
-           Invoke-Pester -CI -Script @{
-             Path       = 'tests/RoundTrip.Full.Tests.ps1'
-             Parameters = @{ SourceVipb = 'tests/Samples/NI Icon editor.vipb' }
-           }
- 
-      # --- Docker image (optional) --------------------------------------------
+      # --- Docker image (main branch and tags only) ----------------------------
       - name: Build Docker image
         run: docker build -t ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} .
 
-      # --- Push Docker image to GHCR (main branch and tags only) --------------
-      - name: Log in to GHCR
+      - name: Docker login, tag & push (main & tags only)
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
 
-      - name: Tag Docker image as 'latest' and branch/tag
+      - name: Tag Docker images
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
         run: |
           docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:latest
           docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:${{ github.ref_name }}
 
       - name: Push Docker images
+        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
         run: |
           docker push ghcr.io/labview-community-ci-cd/seed:${{ github.sha }}
           docker push ghcr.io/labview-community-ci-cd/seed:latest
           docker push ghcr.io/labview-community-ci-cd/seed:${{ github.ref_name }}
 
-
-
-      # --- artefact upload -----------------------------------------------------
-      - name: Upload CLI artefact
+      # --- artifact upload ------------------------------------------------------
+      - name: Upload CLI artifact
         uses: actions/upload-artifact@v4
         with:
           name: vipb-json-cli-linux-x64
